force-app/main/default/objects/Objeto_do_protocolo__c/Objeto_do_protocolo__c.object-meta.xml
<CustomObject>
    <label>Objeto do protocolo</label>
    <nameField>
        <label>Nome de Objeto do protocolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetos do protocolo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>