force-app/main/default/objects/Objeto_do_protocolo__c/fields/Protocolo__c.field-meta.xml
<CustomField>
    <fullName>Protocolo__c</fullName>
    <label>Protocolo</label>
    <referenceTo>Protocolo__c</referenceTo>
    <relationshipLabel>Objetos do protocolo</relationshipLabel>
    <relationshipName>Objetos_do_protocolo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>