force-app/main/default/objects/Objeto_do_protocolo__c/fields/Recebido__c.field-meta.xml
<CustomField>
    <fullName>Recebido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recebido</label>
    <type>Checkbox</type>
</CustomField>