force-app/main/default/objects/Objeto_do_protocolo__c/validationRules/Protocolo_finalizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Protocolo_finalizado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Protocolo__r.Status__c) = &apos;Finalizado&apos;,
ISNEW()
)</errorConditionFormula>
    <errorMessage>Não é possível adicionar objetos em um protocolo já finalizado.</errorMessage>
</ValidationRule>