force-app/main/default/objects/Objeto_do_protocolo__c/validationRules/Somente_recebedor_altera.validationRule-meta.xml
<ValidationRule>
    <fullName>Somente_recebedor_altera</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ProfileId != &apos;00ei0000000nKA9&apos;,
ISCHANGED(Recebido__c),
$User.ContactId != Protocolo__r.Recebido_por__c
)</errorConditionFormula>
    <errorDisplayField>Recebido__c</errorDisplayField>
    <errorMessage>Somente o recebedor pode marcar como recebido.</errorMessage>
</ValidationRule>