force-app/main/default/objects/Objeto_do_protocolo__c/validationRules/Trava_depois_de_finalizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Trava_depois_de_finalizado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
Recebido__c = true,
PRIORVALUE(Recebido__c) = true
),
ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Não é possível alterar o objeto após o recebimento.</errorMessage>
</ValidationRule>